--- a/index.html
+++ b/index.html
@@ -42,6 +42,44 @@
           and with style.
         </p>
       </section>
+      <section>
+        <ul>
+          <li>
+            <img
+              src="./img/about-img-1.jpg"
+              alt="haircut"
+              width="270"
+              height="445"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/about-img-2.jpg"
+              alt="haircut"
+              width="270"
+              height="445"
+            />
+          </li>
+        </ul>
+        <p>About</p>
+        <h2>Best Barbershop in your city</h2>
+        <p>
+          If you want to add more confidence to your image, you should
+          definitely visit us.
+        </p>
+        <p>
+          We are a team that never stops at what has been achieved and are
+          thirsty for changes. And when you fall into the hands of our master,
+          you will never be the same again. We are a team that is always "on the
+          same wave" with clients. Therefore, we are always ready to improve
+          everyone who comes to us!
+        </p>
+        <button type="button">Online-booking</button>
+      </section>
+      <section>
+        <p>Spend your time with the best masters</p>
+        <h2>Services and prices</h2>
+      </section>
     </main>
     <footer></footer>
   </body>
