--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Barbershop</title>
+    <title>Barbershop &#128136;</title>
   </head>
   <body>
     <header>
@@ -179,7 +179,81 @@
           </li>
         </ul>
       </section>
+      <section>
+        <p>In Latin, "barba" means "beard"</p>
+        <h2 hidden>Gallery</h2>
+        <ul>
+          <li>
+            <img
+              src="./img/gallery-img-1.jpg"
+              alt="barber work"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/gallery-img-2.jpg"
+              alt="barber work"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/gallery-img-3.jpg"
+              alt="barber work"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/gallery-img-4.jpg"
+              alt="barber work"
+              width="270"
+              height="360"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Online-booking</h2>
+      </section>
+      <section>
+        <h2>Contacts</h2>
+        <address>
+          <ul>
+            <li>
+              <a href="https://maps.app.goo.gl/DMZZg9rtFZbonNiQ6"
+                >st. Vasilkivska, 7A<br />
+                Kyiv, 08132</a
+              >
+            </li>
+            <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+            <li>
+              <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+            </li>
+          </ul>
+        </address>
+        <p>Working hours</p>
+        <p>Every day from 9:00 to 22:00</p>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>&copy; Copyright 2020</p>
+      <ul>
+        <li class="">
+          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+            >Instagram</a
+          >
+        </li>
+        <li class="">
+          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+            >Youtube</a
+          >
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
